# loom-spec

./: ARCHITECTURE.md  GLOSSARY.md  PAIRING.md  PROTOCOL.md  ROADMAP.md  VECTORS.md  generate.py
keymaps/: akeycode_to_evdev.csv  evdev_to_cgkeycode.csv
vector-check/: Cargo.toml  selftest.sh
vector-check/selftest/vectors/self/: basic.json
vector-check/src/: main.rs
vectors/clocksync/: minfilter.json
vectors/control/: messages.json
vectors/datagram/: header.json
vectors/keymap/: tables.json
vectors/reassembly/: video.json
